--- a/01_docker_terraform/docker_assignments/EDA.ipynb
+++ b/01_docker_terraform/docker_assignments/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6c5d8795",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "051bb0c9",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b61700f4",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "67791c04",
    "metadata": {},
    "outputs": [
@@ -308,8 +308,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b935b00b",
+   "metadata": {},
+   "source": [
+    "# Question 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ef601032",
    "metadata": {},
    "outputs": [],
@@ -323,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "00980c64",
    "metadata": {},
    "outputs": [
@@ -343,8 +351,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f210f13",
+   "metadata": {},
+   "source": [
+    "# Question 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d6903a6f",
    "metadata": {},
    "outputs": [
@@ -360,7 +376,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2353/992955932.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_3047/3302629122.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -387,9 +403,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b113e290",
+   "metadata": {},
+   "source": [
+    "# Question 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ece862a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file_1 = \"/workspaces/Data-Engineering-Zoomcamp/taxi_zone_lookup.csv\"\n",
+    "zones = pd.read_csv(data_file_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a8fb4bc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 265 entries, 0 to 264\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   LocationID    265 non-null    int64 \n",
+      " 1   Borough       265 non-null    object\n",
+      " 2   Zone          264 non-null    object\n",
+      " 3   service_zone  263 non-null    object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 8.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "zones.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b142062e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Zone</th>\n",
+       "      <th>service_zone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>Newark Airport</td>\n",
+       "      <td>EWR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>Jamaica Bay</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>Allerton/Pelham Gardens</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Alphabet City</td>\n",
+       "      <td>Yellow Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>Arden Heights</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LocationID        Borough                     Zone service_zone\n",
+       "0           1            EWR           Newark Airport          EWR\n",
+       "1           2         Queens              Jamaica Bay    Boro Zone\n",
+       "2           3          Bronx  Allerton/Pelham Gardens    Boro Zone\n",
+       "3           4      Manhattan            Alphabet City  Yellow Zone\n",
+       "4           5  Staten Island            Arden Heights    Boro Zone"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zones.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9555998f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickup zone with the highest total_amount on 2025-11-18: East Harlem North\n",
+      "Total amount: 9281.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter trips for nov 18, 2025 \n",
+    "filtered_df_2 = df[\n",
+    "    (pd.to_datetime(df[\"lpep_pickup_datetime\"]).dt.date == pd.to_datetime(\"2025-11-18\").date())\n",
+    "]\n",
+    "\n",
+    "# group trips by pickup location and sum the total amount \n",
+    "pickup_totals = filtered_df_2.groupby(\"PULocationID\")[\"total_amount\"].sum().reset_index()\n",
+    "\n",
+    "# merge with zone names using taxi_zone lookup.csv\n",
+    "pickup_totals = pickup_totals.merge(zones, left_on=\"PULocationID\", right_on=\"LocationID\")\n",
+    "\n",
+    "# zones witht the highest total amount \n",
+    "highest_total = pickup_totals.sort_values(by=\"total_amount\", ascending=False).iloc[0]\n",
+    "\n",
+    "print(f\"Pickup zone with the highest total_amount on 2025-11-18: {highest_total['Zone']}\")\n",
+    "print(f\"Total amount: {highest_total['total_amount']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7e9755c",
+   "metadata": {},
+   "source": [
+    "# Question 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "54e6139d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The drop-off zone with the largest tip is: Yorkville West\n",
+      "Tip amount: 81.89\n"
+     ]
+    }
+   ],
+   "source": [
+    "# merge the trip data with zone names for pickup and drop off\n",
+    "df_1 = df.merge(zones, left_on=\"PULocationID\", right_on=\"LocationID\", suffixes=(\"\", \"_pickup\"))\n",
+    "df_1 = df_1.merge(zones, left_on=\"DOLocationID\", right_on=\"LocationID\", suffixes=(\"\", \"_dropoff\"))\n",
+    "\n",
+    "# filter trips in novemnber 2025 and where pickup zone = \"East Harlem North\"\n",
+    "df_filtered_3 = df_1[\n",
+    "    (pd.to_datetime(df_1[\"lpep_pickup_datetime\"]).dt.month == 11) &\n",
+    "    (pd.to_datetime(df_1[\"lpep_pickup_datetime\"]).dt.year == 2025) &\n",
+    "    (df_1[\"Zone\"] == \"East Harlem North\")\n",
+    "]\n",
+    "\n",
+    "# group by drop off zone and find the maximum tip amount \n",
+    "largest_tip = df_filtered_3.groupby(\"Zone_dropoff\")[\"tip_amount\"].max().reset_index()\n",
+    "\n",
+    "# find the dropoff zone with the highest tip\n",
+    "highest_tip_zone = largest_tip.sort_values(by=\"tip_amount\", ascending=False).iloc[0]\n",
+    "\n",
+    "print(f\"The drop-off zone with the largest tip is: {highest_tip_zone['Zone_dropoff']}\")\n",
+    "print(f\"Tip amount: {highest_tip_zone['tip_amount']}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ece862a6",
+   "id": "741ae9a4",
    "metadata": {},
    "outputs": [],
    "source": []
